# circ

./: .features.txt  .gitignore  .gitmodules  .no_array.zok.swp  COPYING  Cargo.toml  Dockerfile  Makefile  README.md  README_zsharp.md  TODO.md  confidence.c  confidence.in  driver.py  ex.c  ex.in  ex.zok  i  mm.zok  mm10.zok  mul.in  mul.zok  out  output1.txt  output2.txt  requirements.txt  test.txt  test2.txt  test3.txt  util.py
.github/workflows/: ci.yml
aws_benchmark/: aws_controller.py  aws_setup.py  benchmark.sh  build.sh  setup.sh
circ_fields/: .gitignore  Cargo.toml  sizes.txt
circ_fields/src/: ff_field.rs  int_field.rs  lib.rs  size.rs  test.rs
circ_hc/: Cargo.toml  Makefile  generate_macro.zsh  generate_u8.zsh
circ_hc/examples/: u32.rs
circ_hc/src/: hc_u8.rs  lib.rs  macro.rs  macro_.rs  template.rs
circ_hc/src/arc/: template.rs
circ_hc/src/collections/: cache.rs  lru.rs  mod.rs
circ_hc/src/hashconsing/: example_u8.rs  macro_.rs  mod.rs  template.rs
circ_hc/src/raw/: example_u8.rs  macro_.rs  mod.rs  template.rs
circ_hc/src/rc/: example_u8.rs  macro_.rs  mod.rs  template.rs
circ_hc/src/rc_no_raw/: example_u8.rs  macro_.rs  mod.rs
circ_hc/src/test/: bench.rs  gc_hook.rs  mod.rs  qc.rs  random.rs  tiny.rs  weak.rs
circ_opt/: Cargo.toml  README.md
circ_opt/examples/: parser.rs
circ_opt/src/: lib.rs
circ_opt/tests/: trycmd.rs
circ_waksman/: Cargo.toml
circ_waksman/src/: lib.rs
doc/: background.md  zkp.md
doc/mem/: Makefile  comments.sty  macros.tex  main.tex  persistent.tex  refs.bib  sparse.tex  volatile.tex
doc/mem/der_xgcd/: dnc.py
doc/mem/models/: Makefile  data.csv  gcd_uniq.py  plot.R
doc/mem/sage/: poly.sage
doc/projects/: assocociative_commutative_cse.md  plonk_backend.md
examples/: .circ.rs.swp  circ.rs  circ_c.rs  cp.rs  gen.rs  opa_bench.rs  precomp.rs  run_zok.rs  zcxi.rs  zk.rs  zok_fe.rs  zxc.rs  zxe.rs  zxi.rs
examples/C/mpc/: 2pc_millionaires.c  2pc_playground.c  2pc_test.c  2pc_test_2.c  playground.c  test.h
examples/C/r1cs/: add.c
examples/C/smt/: assert_assume_fails.c  assert_assume_ok.c  assert_fails.c  defined_return.c  shl_fails_1.c  shl_fails_2.c  shl_fails_3.c  shl_fails_4.c  shl_ok.c
examples/ZoKrates/mpc/: 2pc_conv.zok  2pc_millionaire.zok  2pc_mult.zok  2pc_mult_add_pub.zok
examples/ZoKrates/opt/: 3_plus_opt.zok  id_opt.zok  log.zok  log16.zok  mult_opt.zok  plus_3_opt.zok  times_2_opt.zok  times_2_u32_opt.zok  times_3_opt.zok
examples/ZoKrates/pf/: 2024_05_24_benny_bug.zok  3_plus.zok.in  (+71 more)
examples/datalog/: arr.pl  bits8.pl  call.pl  dec.pl  dumb_hash.pl  err.pl  inv.pl  not_dec.pl  unbound_rec.pl
examples/ir/: volatile_10accs_size1024.circir  volatile_10accs_size1048576.circir  volatile_10accs_size1099511627776.circir  volatile_10accs_size1152921504606846976.circir  volatile_10accs_size32.circir  volatile_50accs_size1024.circir  volatile_50accs_size1048576.circir  volatile_50accs_size1099511627776.circir  volatile_50accs_size1152921504606846976.circir  volatile_50accs_size32.circir
examples/re/: main.rs
scripts/: aby_test.py  assert_no_default_features.zsh  build_aby.zsh  build_fhe_c_test.zsh  build_fhe_zokrates.zsh  build_fhe_zokrates_test.zsh  build_kahip.zsh  build_kahypar.zsh  build_mpc_c_benchmark.zsh  build_mpc_c_benchmark_f.zsh  build_mpc_c_test.zsh  build_mpc_zokrates_test.zsh  build_r1cs_c_test.zsh  build_seal.zsh  clean_aby.zsh  clean_seal.zsh  compile_aby.zsh  compiler_asymptotics.zsh  cp_test.zsh  dependencies_arch.sh  dependencies_macos_homebrew.sh  dependencies_ubuntu.sh  env.sh  feature_manager.py  file_test.py  file_tests.zsh  input_parser.cpp  install_deps.sh  opa_bench.zsh  profile_sha.zsh  ram_test.zsh  spartan_zok_test.zsh  test_aby.py  test_c_pf.zsh  test_c_r1cs.zsh  test_c_smt.zsh  test_datalog.zsh  test_zok_to_ilp.zsh  test_zok_to_ilp_pf.zsh  zokrates_curly_test.zsh  (+2 more)
scripts/aby_tests/: aby_interpreter  c_bench_aby.py  c_benchmark_aby.py  c_test_aby.py  test_aby.py  test_suite.py  util.py  utils.py  zokrates_test_aby.py  zokrates_test_suite.py
scripts/seal_tests/: c_test_seal.py  make_tests.py  test_suite.py  util.py  zokrates_test_seal.py
scripts/zcx_tests/: array_eq.zx  array_eq.zxf  array_eq_2.zxf  array_oob_read.zxf  array_oob_write.zxf  array_read_write.zx  bit_order.zx  bool_to_bv.zx  casts_to_field.zx  casts_to_u16.zx  casts_to_u32.zx  casts_to_u64.zx  double_generic.zx  double_generic_const.zx  field_cmp.zx  field_mod.zx  field_size.zx  id.zx  inconsistent_array.zxf  inline_array_const.zx  inline_array_const_access.zx  inline_array_const_access.zxf  inline_expression_len.zx  inline_expression_len.zxf  inline_struct_generic.zx  inline_struct_generic.zxf  inline_struct_generic_2.zxf  inline_struct_generic_3.zxf  inline_struct_generic_4.zxf  inline_struct_generic_5.zxf  inner_struct_generic.zx  inner_struct_generic.zxf  literals.zx  missing_arg.zxf.in  missing_arg_field.zxf  missing_arg_idx.zxf  missing_arg_idx.zxf.out  redef_const.zxf  redef_const_2.zxf  redef_fn.zxf  (+29 more)
scripts/zx_tests/: array_eq.zx  array_eq.zxf  array_eq_2.zxf  array_oob_read.zxf  array_oob_write.zxf  array_read_write.zx  bit_order.zx  casts_to_field.zx  casts_to_u16.zx  casts_to_u32.zx  casts_to_u64.zx  double_generic.zx  double_generic_const.zx  field_cmp.zx  field_mod.zx  id.zx  id.zx.in  inconsistent_array.zxf  inline_array_const.zx  inline_array_const_access.zx  inline_array_const_access.zxf  inline_expression_len.zx  inline_expression_len.zxf  inline_struct_generic.zx  inline_struct_generic.zxf  inline_struct_generic_2.zxf  inline_struct_generic_3.zxf  inline_struct_generic_4.zxf  inline_struct_generic_5.zxf  inner_struct_generic.zx  inner_struct_generic.zxf  literals.zx  missing_arg.zxf  missing_arg.zxf.out  missing_arg_field.zxf  missing_arg_field.zxf.in  missing_arg_idx.zxf.in  redef_const.zxf  redef_const_2.zxf  redef_fn.zxf  (+30 more)
src/: cfg.rs  lib.rs  main.rs
src/circify/: includer.rs  mem.rs  mod.rs
src/front/: mod.rs
src/ir/: mod.rs  proof.rs  term.rs  to_r1cs.rs
src/util/: field.rs  mod.rs  ns.rs  once.rs
zx_tests/: bool_to_bv.zx  run_tests.sh  struct_eq.zx
(+868 files in other folders)
