[package]
name = "circ"
version = "0.1.0"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circ_fields = { path = "circ_fields" }
#hashconsing = "1.3"
hashconsing = { git = "https://github.com/alex-ozdemir/hashconsing.git", branch = "phash"}
rug = { version = "1.11", features = ["serde"] }
gmp-mpfr-sys = "1.4"
lazy_static = "1.4"
rand = "0.8"
rsmt2 = { version = "0.14", optional = true }
#rsmt2 = { git = "https://github.com/alex-ozdemir/rsmt2.git" }
ieee754 = "0.2"
zokrates_parser = { path = "third_party/ZoKrates/zokrates_parser", optional = true }
zokrates_pest_ast = { path = "third_party/ZoKrates/zokrates_pest_ast", optional = true }
typed-arena = "2.0"
log = "0.4"
thiserror = "1.0"
bellman = { version = "0.12", optional = true }
ff = "0.12"
fxhash = "0.2"
good_lp = { version = "1.1", features = ["lp-solvers", "coin_cbc"], default-features = false, optional = true }
group = "0.12"
lp-solvers = { version = "0.0.4", optional = true }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3.3"
lang-c = { version = "0.10.1", optional = true}
logos = "0.12"
pairing = "0.22"
pest = "2.4"
pest_derive = "2.1"
pest-ast = "0.3"
from-pest = "0.3"
itertools = "0.10"
petgraph = "0.6"
spartan = { version = "0.7.0", default-features = false, optional = true }
merlin = { version = "3.0.0", optional = true }
curve25519-dalek = {version = "3.2.0", features = ["serde"], optional = true}
paste = "1.0"
im = "15"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
env_logger = "0.8"
bls12_381 = "0.7"
structopt = "0.3"
approx = "0.5.0"

[features]
default = ["bls12381", "ff_dfl"]
bls12381 = []
bn254 = []
ristretto255 = []
ff_dfl = []
c = ["lang-c"]
lp = ["good_lp", "lp-solvers"]
r1cs = ["bellman", "spartan", "merlin", "curve25519-dalek"]
smt = ["rsmt2"]
zok = ["zokrates_parser", "zokrates_pest_ast"]

[[example]]
name = "circ"

[[example]]
name = "zk"
required-features = ["r1cs"]

[[example]]
name = "zxi"
required-features = ["smt", "zok"]

[[example]]
name = "zxc"
required-features = ["smt", "zok"]

[[example]]
name = "opa_bench"
required-features = ["lp"]

[profile.release]
debug = true
