[package]
name = "circ_fields"
version = "0.1.0"
authors = ["kwantam <kwantam@gmail.com>"]
edition = "2021"

[dependencies]
ff = { version = "0.11", features = ["derive"] }
ff_derive = { git = "https://github.com/kwantam/ff.git", rev = "b3041c177b9ae28095c9ce8347600212252abc83" }
ff-derive-num = "0.2"
lazy_static = "1.4"
num-traits = "0.2"
paste = "1.0"
rand = "0.8"
rug = { version = "1.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }

[dev-dependencies]
rand = "0.8"
