[package]
name = "circ_fields"
version = "0.1.0"
authors = ["kwantam <kwantam@gmail.com>"]
edition = "2021"

[dependencies]
ff = { version = "0.12", features = ["derive"] }
ff_derive = "0.12"
ff-derive-num = "0.2"
lazy_static = "1.4"
num-traits = "0.2"
paste = "1.0"
rand = "0.8"
rug = { version = "1.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
datasize = { version = "0.2", features = ["detailed"] }

[dev-dependencies]
rand = "0.8"
