[package]
name = "circ_hc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_chacha = "0.3"
