[package]
name = "circ_hc"
version = "0.1.0"
edition = "2021"

[dependencies]
fxhash = "0.2.1"
hashconsing = { git = "https://github.com/alex-ozdemir/hashconsing.git", branch = "phash"}

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_chacha = "0.3"

[profile.release]
debug = true
