[package]
name = "circ_opt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
trycmd = { version = "0.14", features = ["examples"] }
heck = "0.4"
